--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,10 +26,6 @@
 
 
 [[constraint]]
-  name = "github.com/cheggaaa/pb"
-  version = "2.0.6"
-
-[[constraint]]
   branch = "master"
   name = "github.com/golang/protobuf"
 
@@ -60,6 +56,10 @@
 [[constraint]]
   name = "google.golang.org/grpc"
   version = "1.20.1"
+
+[[constraint]]
+  name = "gopkg.in/cheggaaa/pb.v1"
+  version = "1.0.28"
 
 [[constraint]]
   name = "gopkg.in/natefinch/lumberjack.v2"
